02-access-control/cel-jwt/model-app-scoped/app-gateway-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: librechat-gateway
  namespace: agentgateway-system
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app.kubernetes.io/instance: agentgateway-proxy
    app.kubernetes.io/name: agentgateway-proxy
    gateway.networking.k8s.io/gateway-name: agentgateway-proxy
---
apiVersion: v1
kind: Service
metadata:
  name: librechat-two-gateway
  namespace: agentgateway-system
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app.kubernetes.io/instance: agentgateway-proxy
    app.kubernetes.io/name: agentgateway-proxy
    gateway.networking.k8s.io/gateway-name: agentgateway-proxy
